# opentrails

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db.py  exceptions.py  logger.py  main.py  rate_limiter.py
app/ai/: claude_client.py  destination_intel.py  itinerary_builder.py  packing_list.py  smart_bundle.py  translator.py
app/api/: attractions.py  destinations.py  flights.py  hotels.py  itinerary.py  maps.py  packing.py  search_history.py  translator.py  trips.py  wishlist.py
app/models/: attractions.py  common.py  destinations.py  flights.py  hotels.py  itinerary.py  packing.py  translator.py  trips.py
app/services/: amadeus.py  frankfurter.py  kiwi.py  nominatim.py  open_meteo.py  opentripmap.py  overpass.py  providers.py  rest_countries.py  wikipedia.py  wikivoyage.py
app/storage/: itineraries.py  search_history.py  trips.py  wishlist.py
app/utils/: cache.py  http.py
data/: .gitkeep
frontend/templates/: about.html  attractions.html  base.html  destination.html  flights.html  home.html  hotels.html  itinerary.html  search.html  trip.html  wishlist.html
tests/: conftest.py
tests/ai/: test_itinerary_builder.py  test_packing_list.py
tests/api/: test_attractions.py  test_destinations.py  test_health.py  test_trips.py
tests/services/: test_frankfurter.py  test_nominatim.py  test_open_meteo.py  test_overpass.py  test_providers.py  test_rest_countries.py
tests/storage/: test_trips.py  test_wishlist.py
(+44 files in other folders)
